# 2025-sem1-cni-inductions

./: .gitignore  Dockerfile  docker-compose.yml
src/: README.md
src/Task1/: README.md
src/example-submission/task1/: T1
src/log/: latest_build
src/task1/: README.md
src/task2/: CodeCopy  Dockerfile  circle_drawer.py
src/task2/.devcontainer/: devcontainer.json
src/task2/Videos/: PlsReadMe
src/task2/src/turtle_draw/: setup.py
src/task2/turtle_draw/: circle_drawer.py  setup.py
src/task2/turtle_draw/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/task2/turtle_draw/log/: latest_build
src/task2/turtle_draw/turtle_draw/: .circle_drawer.py.swp  __init__.py  circleDrawer.py  circle_drawer.py  spiralDrawer.py  spiral_drawer.py  square_drawer.py  star_drawer.py
src/task2/turtle_mover/: package.xml  setup.py
src/task2/turtle_mover/turtle_mover/: circle_drawer.py
src/task3/: Code  README.md  README.txt  boid theorem pseudo code  boids.py  circle_drawer2.py  readme.md  task3_link.txt  youtube.txt  youtube_link.txt  youtubelink.txt
src/task3/spawn_turtle/: package.xml  setup.cfg  setup.py
src/task3/spawn_turtle/spawn_turtle/: swarm.py
src/task3/src/turtle_swarm/: package.xml  setup.py
src/task3/swarm/: package.xml  setup.py
src/task3/swarm/install/: local_setup.sh  setup.sh  setup.zsh
src/task3/swarm_turtlesim/: package.xml  setup.cfg  setup.py
src/task3/turtle_boids/: Task3 vid  package.xml  setup.cfg  setup.py
src/task3/turtle_draw/: package.xml  setup.py
src/task3/turtle_swarm/: package.xml  setup.py
(+63 files in other folders)
