<?xml version="1.0"?>
<package format="3">
  <name>turtle_mover</name>
  <version>0.0.0</version>
  <description>Python package to move the turtle in ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
